# libspe

./: CMakeLists.txt  Doxyfile  README  README.md  spe.cpp  spe.h  speutils.h
demo/: CMakeLists.txt  README  README.md  demo.cpp  image.spe  spectrum.spe
doc/: Documentation
eigen/: CMakeLists.txt  speutils-eigen.cpp  speutils-eigen.h
include/: calibrationData.h  data.h  metadata.h  offsets.h  roiData.h  spe.h
src/: CMakeLists.txt  calibrationData.cpp  data.cpp  metadata.cpp  roiData.cpp  spe.cpp  speutils.cpp
utils/: CMakeLists.txt  speutils.cpp  speutils.h
